consensus-performance/caliper_es/network/docker-compose/raft/temp/ca-org2-oslab-com-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose -f c.yaml convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: ca-org2-oslab-com
  name: ca-org2-oslab-com
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: ca-org2-oslab-com
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose -f c.yaml convert
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/temp_ca: "true"
        io.kompose.service: ca-org2-oslab-com
    spec:
      containers:
        - args:
            - sh
            - -c
            - fabric-ca-server start -b admin:adminpw -d
          image: hyperledger/fabric-ca:1.4.4
          name: ca.org2.oslab.com
          ports:
            - containerPort: 7054
          resources: {}
          volumeMounts:
            - mountPath: /etc/hyperledger/fabric-ca-server-config
              name: ca-org2-oslab-com-claim0
            - mountPath: /etc/hyperledger/fabric-ca-server-tls
              name: ca-org2-oslab-com-claim1
      restartPolicy: Always
      volumes:
        - name: ca-org2-oslab-com-claim0
          persistentVolumeClaim:
            claimName: ca-org2-oslab-com-claim0
        - name: ca-org2-oslab-com-claim1
          persistentVolumeClaim:
            claimName: ca-org2-oslab-com-claim1
status: {}
