consensus-performance/caliper_es/network/docker-compose/raft/temp/ca-org1-oslab-com-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose -f c.yaml convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: ca-org1-oslab-com
  name: ca-org1-oslab-com
spec:
  ports:
    - name: "7054"
      port: 7054
      targetPort: 7054
  selector:
    io.kompose.service: ca-org1-oslab-com
status:
  loadBalancer: {}
