consensus-performance/caliper_es/network/docker-compose/raft/temp/temp_ca-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: temp_ca
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/temp_ca: "true"
  podSelector:
    matchLabels:
      io.kompose.network/temp_ca: "true"
